Revert "Attempt to fix cutoff on Android Geckoview"
This reverts commit ebd6304915644786a443056e450da2600fad914c.

--- a/css/homepage.css
+++ b/css/homepage.css
@@ -38,8 +38,7 @@
 /*Typing animation*/
 
 .typing-animation {
-  width: 9.2em;
-  padding: 0 1rem;
+  width: 9.4em;
   animation: typing 1.3s steps(22), blink 0.7s step-end infinite alternate;
   white-space: nowrap;
   overflow: hidden;
@@ -65,6 +64,7 @@
     background-attachment: scroll;
   }
 }
+
 
 /* Main */
 
@@ -115,6 +115,7 @@
   top: -10px;
 }
 
+
 .card-content-wrapper {
   height: 200px;
 }
@@ -127,6 +128,7 @@
 .card-content:hover {
   color: var(--text-color);
 }
+
 
 /* Media Queries */
 
@@ -189,6 +191,7 @@
   }
 }
 
+
 @media screen and (max-width: 480px) {
   .card-wrapper {
     display: block;
@@ -197,7 +200,7 @@
   }
   .card {
     margin: auto;
-    padding: 1em;
+    padding:1em;
     border-bottom: 1px solid grey;
     max-width: 98%;
   }
